@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX lh-sources-3.6-armv6.patch 2482 SHA256 50ce1fc672656fa26fa4fa35694a1007049f682400d14724c7077566df740491 SHA512 81a57f74db5d7776e6632dc9b7ac5f52c75b842a218efa0a5c1ea2480186ddc7d579d896ed5d1793a3f6a88b746287d0dad1d0ee827405d503bdb4c271dda9c4 WHIRLPOOL 8d383031a391c7df9b38e3db4b281f5e234a44d915d61b8cd19b1fbb2130ba18967c57e62a257f84d1fdf8ea00ea41e885f24ed00bf328a8e4647f68acd70ff0
 AUX lh-sources-3.7-armv6.patch 2518 SHA256 75dbd5b6f9178baf47e2d3a2e8211bccfda83feb8217606612cc5a2c85bc065b SHA512 e3183c94bfcadefb447aaeb07a7c9709e1141b1acba301e34159bbef43817e0cf298209a6a5a787a01b7581eb937933d5ee70eb55dbf9267f25583adaad8b448 WHIRLPOOL 04998e4b27542478754ffb835c37b8cab6478a7b05d4f7f303af291ea4fa774bea7f29923e06416eb23b809c37421d1d923a09238265e38c3bf17f731ec9aa35
@@ -14,18 +14,21 @@ DIST genpatches-3.6-11.base.tar.bz2 244398 SHA256 464238ceee9aee5a292dc4c5c8311a
 DIST genpatches-3.6-11.extras.tar.bz2 17038 SHA256 bf6be402ec3ef125ecaf626379f777a262e2f6776d8f5115ac0834f1e3d18b25 SHA512 614c845d474890ad0fd4271ea133464626498c3877d49c1df9940cfb2bc2a68a13828b6cae590a0d5619cf21521fe119fab782714d0bc37c287e0bba29f22fdf WHIRLPOOL ef8c9a76be1ac027b3d01e47bf22dbe178b2b68e85f4ace1186aedd89e513ff010d6e50e1392e17dde3bfebabcff07c348b04163398c43c045d6e37e78caf954
 DIST genpatches-3.7-2.base.tar.bz2 14787 SHA256 a4ce4247ebcbba337f7efa25acf3e42a19f8d165068c6c13d3cae63bc5fe603e SHA512 89b0b5dbd050ec07f5bbbb999e44113d1e1a1898ca4c8ba5f88e1645d1b88169d7a2a534d08e8eed342f685693142794d27b09dfe4bc067c64332c38ce4d6b9f WHIRLPOOL f213a1793c0d3883659ebab53ff9aa5ecc7dbb842b1a89330b3b637f4bb3a356c3f9be9ca712fe1ab5bde06d27118f62c33434275c9aa6bf0871e39a06c20fcd
 DIST genpatches-3.7-4.base.tar.bz2 54647 SHA256 7bcf530b7f5c0aefdd113ed4d5c49d43789ca13c1f40d2c17bf5c060bccf64d3 SHA512 9223e02c950138838412ea3bde6a466d7b5072474b9e763bbb1f826b368e702a9cf57033f3c7d3d2c6714e6b7624072d7ad1165cae61643cf6daa919bbd13463 WHIRLPOOL 1d91b583a5035a14f4cc7d39e33dc003b7a2fb7dbca785656c4007b948f3b3cb2c78ef773e56dec706fbef66c04ea8556f70fb671fb6fc1394a2c38b2453d740
+DIST genpatches-3.7-5.base.tar.bz2 129620 SHA256 6db9674a1380748017e12ecf097ce14d655e74d164210f0cc13057bd7c0d85e2 SHA512 0626fdf3d6c8b76e911b14d7e49beda00ba63ebd06ad7553ca9e60b775f8a26a794de21359498a747d3d6dd8244a53255033a19553409db9658071a273087ca9 WHIRLPOOL b5c9975ee15ff3626054168df94175b863c64102210688f14c3beffcefc040cdae53af06134e060c28a233ac1086661d585fe3e2d1a60184223b571815b1b1c2
+DIST genpatches-3.7-5.extras.tar.bz2 17039 SHA256 e5d231e11a8443d9301c40b0825d3734888c8004039a22422028750f2ae88f04 SHA512 f02b178fd2a41dfc2340062074237b0a810bd0278f8d0bcbc8c19d5763511d4bb3846e91b4e2a10df54a72005b7e8788210bcfe23af070d57b365db95eff6075 WHIRLPOOL e7056d0e3230716d941b9f81981acd00adf2c9fb001c0f1879f6c8770a773739d5484b2dc45996ced83639bb6a1bfc1c51b7d10650d48db942d347683f82738f
 DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
 DIST linux-3.6.tar.bz2 82296001 SHA256 88ae0a20fd39ecae79db0ce8f9397922fae33c8b06a54ed2c883c861126c9771 SHA512 cbaefc2c4c8ab2251c3345b7b2c88d55a49e3468d8b177b05dd6d96a802efa9a052b1a1ecab8b71298bac97f45259516d88253838332b4fdb4307780ebcddce9 WHIRLPOOL e17e3800951f0c3af21015d1a1c99698d0ef70815bd4f131dd60b30baef70d4c255988857533a9a7c058388c2febfcf02d12cde2a7ed46b24fa85aeb260c0251
 DIST linux-3.7.tar.bz2 83671392 SHA256 dc08d87a579fe2918362e6666e503a95a76296419195cb499aa9dd4dbe171a9e SHA512 dad07e23b5d05a1a12092b59ea25c514ff9e89803ecf65b08f09b82aebc511fd06d2a492dea6364c3740a517f0a06a0ddb1c6847658d158205ad88995d69aaf3 WHIRLPOOL 572514032d7d64cc6a2b6ceeae7489e4b3fb48b5b63543d041ad675cd0569549ed88dc9c04ffdf91e78b8424d00b62384af78d7a41b7f399c31c056f0aa0344b
 EBUILD lh-sources-3.6.11-r1.ebuild 2561 SHA256 1196c6c6b99d4025b408155ed9d04ac79842e4a66320382a9afcbcd899146285 SHA512 eebf80f0d3fedcfdc8e39fe5740b59814cc4d8768b52728b8903c04290fc903f61740777d8cc176fac8490f570e89c53694a7bbaaa855cb53f7f7c14541ea576 WHIRLPOOL e9664b347bc9b60348176cee828d42430f6980a1ba0e1885063dd95a1f632f760ab80b07a94792a22d366ba60bd1e315e19ac73ccf2de79bc4974fea095fd957
 EBUILD lh-sources-3.7.1.ebuild 2647 SHA256 a427fdffbbf49a78db9573b3419eddaf41ab4d559c00616ec1c3b917b596760a SHA512 0611a144b344cc618a10f5ef7cba42a7464ca23dd437d48d8ad29234c7871e405a48854f9a0e3aaf84599d1a95bcebdeb6893566945b5779c7c41857f1c3aca8 WHIRLPOOL 1cd6c976b801d3007d56094b8e82112be10a96a15b0e49ffe4edbf42cc733ab921f8e194f0838fa1898f4daa03e599c18150b0b96a6f7d28108d9970d739b1f4
 EBUILD lh-sources-3.7.2.ebuild 2676 SHA256 674b2f91904700f888049594ed2642807c546c697cc7c02adaca6dcb54ce4d4a SHA512 492c11d6681251a71c562411e2de3d744965498a070a4bd4c4ea2546bace1be6da9e47065cbb3c9f2388c705ddfc5766eb9f9f586feee961f2f8811bd8d49a3b WHIRLPOOL e355df6e55d898a3c8c645568a7fe87067687091fe542478a07fed41571044a2ecace21d17f8af87693c648e3228a0c74a1fd4b127515f12da6a457c5a54b80c
-MISC ChangeLog 3301 SHA256 9d2587dbf810e54a0239f9d7297f655ba9b3af72832c65f57aac7d14e49a4ceb SHA512 2d0ee33b81ae2d1c972ec55fab2efe1da5cfeeb9398f8f7d4dd8dbf7e065f506cca786c29da6841d33ad6b2ad4c0f781db7928ceed401be6a55b34951051be54 WHIRLPOOL 9c80e61e0b19dd0c07277d94c4248efe3ed95c858803f2e1bc0bacaefa747a8275fcdf288bb4776032efc8270c59466fd1db256ec841c1f823a44b68f4c4a543
+EBUILD lh-sources-3.7.3.ebuild 2683 SHA256 562f4742027ea2e74e80f379d82b4b621993d6a664204fc541e03ba294945c51 SHA512 aebdea3ccb7c640d277d7866b5ab91d6732bafbc454cd878180fef063b6cc80a1ecaac786e9546498c59aca242c593979879dc98c715fe649d9d319135d05878 WHIRLPOOL 55a49646a40b48c67070618a5a6ee1e52e61a5549c48c7758d7b1a720849145c10c8e855427d12620d90f89d31cdeb69c91e7bfdc4d2ff2641acf3d98b5739d2
+MISC ChangeLog 3423 SHA256 92d39d61a6d5f71f6d35c49e32bc29e6081715af133fccbc781d6bade6dc1c6e SHA512 d802253ec2d9cfb1cfe946c040a3b80f00e5da2351a1d5f1f198add63526df7a1eb1297858723a191c35382f990ff94b208e129593ff6e4ad6b6fb00e14ade20 WHIRLPOOL e714ee891caaaf4f0c877fc1ee7d46ebd168217dcc6c8384ca7f03e852cbb8dfb59a49e97c3c3a10dcb90d7ec4e31a4b0ebde8ddea28050e17d1d7fdfef25c21
 MISC metadata.xml 557 SHA256 982496d5745dd735211766ebc91e40ad9a8ec7d89eb78e00ad411d91c650fbad SHA512 330189802e94e4cc97c0f288c270e04345b055493fa7e387ca8d21c502dd3791babea54fa8ee3dd4fc4611ae76d5e0ae9568901c91a36817a4fc944715c08a2a WHIRLPOOL 145c8d803e2aa9b589b77065d361fe0bd9b8262767b6ee272dce7dc577bf6e72246617babe1204d56efe3b658bb3e6b6571a349d9f6e4ef2a9059f6d12f936fb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAlDxg/sACgkQgAnW8HDreRYEywCggOhoNuCyQjlI8K12H7ylwdlm
-+6sAn26iMc4ilZzPModRxO1FQMq7zQ21
-=Fr0l
+iEYEAREIAAYFAlD5EBAACgkQgAnW8HDreRZ1hACgtswtoZUs11JwQINDj6/AJ0Nn
+0W0AoMdFlc4spJpLtMD+7VWTr8PeLJd5
+=XG4d
 -----END PGP SIGNATURE-----
